--- a/project_name/requirements.txt
+++ b/project_name/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.12.2
 crispy-bootstrap5==0.7
 Django==4.2.3
 django-bootstrap-v5==1.0.11
+django-countries==7.5.1
 django-crispy-forms==2.0
 django-fontawesome-5==1.0.18
 djangorestframework==3.14.0
@@ -11,3 +12,4 @@ python-dotenv==1.0.0
 pytz==2023.3
 soupsieve==2.4.1
 sqlparse==0.4.4
+typing_extensions==4.7.1
