It was included in the project a method to read and processing xml file. It's not working error in shema to relationship between findall cuerpo for specifc cabezera

--- a/data_science/Pipfile
+++ b/data_science/Pipfile
@@ -20,6 +20,8 @@ soupsieve = "==2.4.1"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.7.1"
 requests = "*"
+tweepy = "*"
+python-decouple = "*"
 
 [dev-packages]
 
