--- a/data_science/requirements.txt
+++ b/data_science/requirements.txt
@@ -4,7 +4,7 @@ certifi==2023.7.22
 charset-normalizer==3.3.0
 contourpy==1.1.1
 crispy-bootstrap5==0.7
-cycler==0.12.0
+cycler==0.12.1
 decouple==0.0.7
 Django==4.2.3
 django-bootstrap-v5==1.0.11
@@ -13,8 +13,9 @@ django-crispy-forms==2.0
 django-fontawesome-5==1.0.18
 djangorestframework==3.14.0
 et-xmlfile==1.1.0
-fonttools==4.43.0
+fonttools==4.43.1
 idna==3.4
+joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
 matplotlib==3.8.0
@@ -27,14 +28,17 @@ Pillow==10.0.1
 psycopg2==2.9.5
 pyparsing==3.1.1
 python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+scikit-learn==1.3.1
 scipy==1.11.3
 six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.4.4
+threadpoolctl==3.2.0
 tweepy==4.14.0
 typing_extensions==4.7.1
 tzdata==2023.3
